--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.7.0",
+    "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.5.10",
+    "@types/alpinejs": "^3.13.10",
+    "alpinejs": "^3.13.10",
+    "astro": "^4.7.0",
     "typescript": "^5.4.5"
   }
 }
